# washi-cut

./: .gitignore  LICENSE  README.md  pyproject.toml
src/washiwrap/: __init__.py  cli.py  config.py  faces.py  geometry.py  layout.py  mesh_io.py  svg_export.py  utils.py
src/washiwrap/unfolding/: __init__.py  base.py  bfs_strips.py  hamiltonian.py
tests/: conftest.py  test_acceptance_cli.py  test_unfolder_modes.py
tests/fixtures/: d20.stl  generate_meshes.py
